QuadTur/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    IMPORT
    VAR_CHAR
    TRUE
    IFELSE
    FALSE
    FROM

Grammar

Rule 0     S' -> program
Rule 1     program -> START EDJO VAR_ID crea_primer_quadruple crea_funcion_global SEMICOLON Vars funciones Main
Rule 2     crea_primer_quadruple -> <empty>
Rule 3     crea_funcion_global -> <empty>
Rule 4     Vars -> Tipo VAR_ID mas_vars agrega_var_funcion SEMICOLON Vars
Rule 5     Vars -> <empty>
Rule 6     Tipo -> INT
Rule 7     Tipo -> DECIMAL
Rule 8     Tipo -> STRING
Rule 9     Tipo -> CHAR
Rule 10    Tipo -> BOOL
Rule 11    mas_vars -> COMMA VAR_ID mas_vars
Rule 12    mas_vars -> <empty>
Rule 13    agrega_var_funcion -> <empty>
Rule 14    Asignacion -> VAR_ID push_var_PilaOperandos ASSIGN push_operador_PilaOperadores ExpI SEMICOLON resuelve_asignacion
Rule 15    push_var_PilaOperandos -> <empty>
Rule 16    push_operador_PilaOperadores -> <empty>
Rule 17    resuelve_asignacion -> <empty>
Rule 18    ExpI -> ExpK resuelve_operadores_relacionales
Rule 19    ExpI -> ExpK Operandos push_operador_PilaOperadores ExpK resuelve_operadores_relacionales
Rule 20    Operandos -> LT
Rule 21    Operandos -> GT
Rule 22    Operandos -> NE
Rule 23    Operandos -> LE
Rule 24    Operandos -> GE
Rule 25    Operandos -> EQ
Rule 26    resuelve_operadores_relacionales -> <empty>
Rule 27    ExpK -> ExpT resuelve_termino
Rule 28    ExpK -> ExpT resuelve_termino pos_SUMRES push_operador_PilaOperadores ExpK
Rule 29    resuelve_termino -> <empty>
Rule 30    pos_SUMRES -> PLUS
Rule 31    pos_SUMRES -> MINUS
Rule 32    ExpT -> ExpF resuelve_factor
Rule 33    ExpT -> ExpF resuelve_factor pos_MULTDIV push_operador_PilaOperadores ExpT
Rule 34    resuelve_factor -> <empty>
Rule 35    pos_MULTDIV -> MULT
Rule 36    pos_MULTDIV -> DIV
Rule 37    ExpF -> VAR_CTE
Rule 38    ExpF -> LPAREN agrega_falso ExpI RPAREN quita_falso
Rule 39    ExpF -> VAR_ID push_var_PilaOperandos pos_arreglo
Rule 40    ExpF -> llama_funcion
Rule 41    VAR_CTE -> VAR_INT push_int_PilaOperandos
Rule 42    VAR_CTE -> VAR_DECIMAL push_decimal_PilaOperandos
Rule 43    push_int_PilaOperandos -> <empty>
Rule 44    push_decimal_PilaOperandos -> <empty>
Rule 45    agrega_falso -> <empty>
Rule 46    quita_falso -> <empty>
Rule 47    llama_funcion -> VAR_ID LPAREN agrega_falso checa_funcion_si_existe argumentos RPAREN quita_falso resuelve_llamada_funcion guarda_resultado_funcion
Rule 48    checa_funcion_si_existe -> <empty>
Rule 49    argumentos -> ExpI resuelve_argumentos mas_argumentos
Rule 50    argumentos -> <empty>
Rule 51    mas_argumentos -> COMMA ExpI resuelve_argumentos mas_argumentos
Rule 52    mas_argumentos -> <empty>
Rule 53    resuelve_argumentos -> <empty>
Rule 54    resuelve_llamada_funcion -> <empty>
Rule 55    guarda_resultado_funcion -> <empty>
Rule 56    pos_arreglo -> SLBRACKET ExpI SRBRACKET
Rule 57    pos_arreglo -> <empty>
Rule 58    funciones -> FUNC tipo_funcion VAR_ID LPAREN param RPAREN agrega_funcion LBRACKET Vars reg_brack RBRACKET fin_func_quad funciones
Rule 59    funciones -> <empty>
Rule 60    tipo_funcion -> VOID
Rule 61    tipo_funcion -> Tipo
Rule 62    param -> Tipo VAR_ID pos_commaf
Rule 63    param -> <empty>
Rule 64    pos_commaf -> COMMA Tipo VAR_ID pos_commaf
Rule 65    pos_commaf -> <empty>
Rule 66    agrega_funcion -> <empty>
Rule 67    fin_func_quad -> <empty>
Rule 68    reg_brack -> Estatutos reg_brack
Rule 69    reg_brack -> <empty>
Rule 70    Estatutos -> Condicion
Rule 71    Estatutos -> Ciclo
Rule 72    Estatutos -> Return
Rule 73    Estatutos -> Asignacion
Rule 74    Estatutos -> Print
Rule 75    Estatutos -> Llamada_Func
Rule 76    Estatutos -> TurtleMotion
Rule 77    Condicion -> IF LPAREN ExpI RPAREN crea_GOTOF LBRACKET reg_brack RBRACKET pos_else llena_cuadruplo_if
Rule 78    crea_GOTOF -> <empty>
Rule 79    llena_cuadruplo_if -> <empty>
Rule 80    pos_else -> ELSE crea_else_cuadruplo LBRACKET reg_brack RBRACKET
Rule 81    pos_else -> <empty>
Rule 82    crea_else_cuadruplo -> <empty>
Rule 83    Return -> RETURN ExpI SEMICOLON resuelve_return
Rule 84    resuelve_return -> <empty>
Rule 85    Print -> PRINT LPAREN VAR_STRING RPAREN SEMICOLON
Rule 86    Print -> PRINT LPAREN ExpI RPAREN SEMICOLON crea_print
Rule 87    crea_print -> <empty>
Rule 88    Llamada_Func -> VAR_ID LPAREN agrega_falso checa_funcion_si_existe argumentos RPAREN quita_falso resuelve_llamada_funcion SEMICOLON vtc_action
Rule 89    vtc_action -> <empty>
Rule 90    Ciclo -> For
Rule 91    Ciclo -> While
Rule 92    Ciclo -> DoWhile
Rule 93    While -> WHILE guarda_numero_cuadruplo LPAREN ExpI RPAREN crea_GOTOF LBRACKET reg_brack RBRACKET regresa_inicio_while
Rule 94    guarda_numero_cuadruplo -> <empty>
Rule 95    regresa_inicio_while -> <empty>
Rule 96    DoWhile -> DO LBRACKET reg_brack RBRACKET WHILE LPAREN ExpI RPAREN SEMICOLON
Rule 97    For -> FOR LPAREN VAR_ID ASSIGN ExpI SEMICOLON ExpI SEMICOLON VAR_ID Exp_ciclo RPAREN LBRACKET reg_brack RBRACKET
Rule 98    Exp_ciclo -> PLUS VAR_INT
Rule 99    Exp_ciclo -> MINUS VAR_INT
Rule 100   Exp_ciclo -> MULT VAR_INT
Rule 101   Exp_ciclo -> DIV VAR_INT
Rule 102   Exp_ciclo -> PLUSPLUS
Rule 103   Exp_ciclo -> MINUSMINUS
Rule 104   TurtleMotion -> Position
Rule 105   TurtleMotion -> Right
Rule 106   TurtleMotion -> Left
Rule 107   TurtleMotion -> Forward
Rule 108   TurtleMotion -> Circle
Rule 109   TurtleMotion -> IniciaTurtle
Rule 110   TurtleMotion -> TerminaTurtle
Rule 111   Position -> TUR POINT POS LPAREN ExpI COMMA ExpI RPAREN SEMICOLON pfc_set_position
Rule 112   pfc_set_position -> <empty>
Rule 113   Forward -> TUR POINT FORWARD LPAREN ExpI RPAREN SEMICOLON pfc_move_forward
Rule 114   pfc_move_forward -> <empty>
Rule 115   Right -> TUR POINT RIGHT LPAREN ExpI RPAREN SEMICOLON pfc_turn_right
Rule 116   pfc_turn_right -> <empty>
Rule 117   Left -> TUR POINT LEFT LPAREN ExpI RPAREN SEMICOLON pfc_turn_left
Rule 118   pfc_turn_left -> <empty>
Rule 119   Circle -> TUR POINT CIRCLE LPAREN ExpI RPAREN SEMICOLON pfc_draw_circle
Rule 120   pfc_draw_circle -> <empty>
Rule 121   IniciaTurtle -> TUR POINT TURTLE LPAREN RPAREN SEMICOLON pfc_create_turtle
Rule 122   pfc_create_turtle -> <empty>
Rule 123   TerminaTurtle -> TUR POINT FINISH LPAREN RPAREN SEMICOLON pfc_finish_drawing
Rule 124   pfc_finish_drawing -> <empty>
Rule 125   Main -> MAIN agrega_main_funcion LPAREN RPAREN LBRACKET Vars reg_brack RET ZERO SEMICOLON RBRACKET
Rule 126   agrega_main_funcion -> <empty>

Terminals, with rules where they appear

ASSIGN               : 14 97
BOOL                 : 10
CHAR                 : 9
CIRCLE               : 119
COMMA                : 11 51 64 111
DECIMAL              : 7
DIV                  : 36 101
DO                   : 96
EDJO                 : 1
ELSE                 : 80
EQ                   : 25
FALSE                : 
FINISH               : 123
FOR                  : 97
FORWARD              : 113
FROM                 : 
FUNC                 : 58
GE                   : 24
GT                   : 21
IF                   : 77
IFELSE               : 
IMPORT               : 
INT                  : 6
LBRACKET             : 58 77 80 93 96 97 125
LE                   : 23
LEFT                 : 117
LPAREN               : 38 47 58 77 85 86 88 93 96 97 111 113 115 117 119 121 123 125
LT                   : 20
MAIN                 : 125
MINUS                : 31 99
MINUSMINUS           : 103
MULT                 : 35 100
NE                   : 22
PLUS                 : 30 98
PLUSPLUS             : 102
POINT                : 111 113 115 117 119 121 123
POS                  : 111
PRINT                : 85 86
RBRACKET             : 58 77 80 93 96 97 125
RET                  : 125
RETURN               : 83
RIGHT                : 115
RPAREN               : 38 47 58 77 85 86 88 93 96 97 111 113 115 117 119 121 123 125
SEMICOLON            : 1 4 14 83 85 86 88 96 97 97 111 113 115 117 119 121 123 125
SLBRACKET            : 56
SRBRACKET            : 56
START                : 1
STRING               : 8
TRUE                 : 
TUR                  : 111 113 115 117 119 121 123
TURTLE               : 121
VAR_CHAR             : 
VAR_DECIMAL          : 42
VAR_ID               : 1 4 11 14 39 47 58 62 64 88 97 97
VAR_INT              : 41 98 99 100 101
VAR_STRING           : 85
VOID                 : 60
WHILE                : 93 96
ZERO                 : 125
error                : 

Nonterminals, with rules where they appear

Asignacion           : 73
Ciclo                : 71
Circle               : 108
Condicion            : 70
DoWhile              : 92
Estatutos            : 68
ExpF                 : 32 33
ExpI                 : 14 38 49 51 56 77 83 86 93 96 97 97 111 111 113 115 117 119
ExpK                 : 18 19 19 28
ExpT                 : 27 28 33
Exp_ciclo            : 97
For                  : 90
Forward              : 107
IniciaTurtle         : 109
Left                 : 106
Llamada_Func         : 75
Main                 : 1
Operandos            : 19
Position             : 104
Print                : 74
Return               : 72
Right                : 105
TerminaTurtle        : 110
Tipo                 : 4 61 62 64
TurtleMotion         : 76
VAR_CTE              : 37
Vars                 : 1 4 58 125
While                : 91
agrega_falso         : 38 47 88
agrega_funcion       : 58
agrega_main_funcion  : 125
agrega_var_funcion   : 4
argumentos           : 47 88
checa_funcion_si_existe : 47 88
crea_GOTOF           : 77 93
crea_else_cuadruplo  : 80
crea_funcion_global  : 1
crea_primer_quadruple : 1
crea_print           : 86
fin_func_quad        : 58
funciones            : 1 58
guarda_numero_cuadruplo : 93
guarda_resultado_funcion : 47
llama_funcion        : 40
llena_cuadruplo_if   : 77
mas_argumentos       : 49 51
mas_vars             : 4 11
param                : 58
pfc_create_turtle    : 121
pfc_draw_circle      : 119
pfc_finish_drawing   : 123
pfc_move_forward     : 113
pfc_set_position     : 111
pfc_turn_left        : 117
pfc_turn_right       : 115
pos_MULTDIV          : 33
pos_SUMRES           : 28
pos_arreglo          : 39
pos_commaf           : 62 64
pos_else             : 77
program              : 0
push_decimal_PilaOperandos : 42
push_int_PilaOperandos : 41
push_operador_PilaOperadores : 14 19 28 33
push_var_PilaOperandos : 14 39
quita_falso          : 38 47 88
reg_brack            : 58 68 77 80 93 96 97 125
regresa_inicio_while : 93
resuelve_argumentos  : 49 51
resuelve_asignacion  : 14
resuelve_factor      : 32 33
resuelve_llamada_funcion : 47 88
resuelve_operadores_relacionales : 18 19
resuelve_return      : 83
resuelve_termino     : 27 28
tipo_funcion         : 58
vtc_action           : 88

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . START EDJO VAR_ID crea_primer_quadruple crea_funcion_global SEMICOLON Vars funciones Main

    START           shift and go to state 1

    program                        shift and go to state 2

state 1

    (1) program -> START . EDJO VAR_ID crea_primer_quadruple crea_funcion_global SEMICOLON Vars funciones Main

    EDJO            shift and go to state 3


state 2

    (0) S' -> program .



state 3

    (1) program -> START EDJO . VAR_ID crea_primer_quadruple crea_funcion_global SEMICOLON Vars funciones Main

    VAR_ID          shift and go to state 4


state 4

    (1) program -> START EDJO VAR_ID . crea_primer_quadruple crea_funcion_global SEMICOLON Vars funciones Main
    (2) crea_primer_quadruple -> .

    SEMICOLON       reduce using rule 2 (crea_primer_quadruple -> .)

    crea_primer_quadruple          shift and go to state 5

state 5

    (1) program -> START EDJO VAR_ID crea_primer_quadruple . crea_funcion_global SEMICOLON Vars funciones Main
    (3) crea_funcion_global -> .

    SEMICOLON       reduce using rule 3 (crea_funcion_global -> .)

    crea_funcion_global            shift and go to state 6

state 6

    (1) program -> START EDJO VAR_ID crea_primer_quadruple crea_funcion_global . SEMICOLON Vars funciones Main

    SEMICOLON       shift and go to state 7


state 7

    (1) program -> START EDJO VAR_ID crea_primer_quadruple crea_funcion_global SEMICOLON . Vars funciones Main
    (4) Vars -> . Tipo VAR_ID mas_vars agrega_var_funcion SEMICOLON Vars
    (5) Vars -> .
    (6) Tipo -> . INT
    (7) Tipo -> . DECIMAL
    (8) Tipo -> . STRING
    (9) Tipo -> . CHAR
    (10) Tipo -> . BOOL

    FUNC            reduce using rule 5 (Vars -> .)
    MAIN            reduce using rule 5 (Vars -> .)
    INT             shift and go to state 13
    DECIMAL         shift and go to state 9
    STRING          shift and go to state 11
    CHAR            shift and go to state 10
    BOOL            shift and go to state 8

    Vars                           shift and go to state 12
    Tipo                           shift and go to state 14

state 8

    (10) Tipo -> BOOL .

    VAR_ID          reduce using rule 10 (Tipo -> BOOL .)


state 9

    (7) Tipo -> DECIMAL .

    VAR_ID          reduce using rule 7 (Tipo -> DECIMAL .)


state 10

    (9) Tipo -> CHAR .

    VAR_ID          reduce using rule 9 (Tipo -> CHAR .)


state 11

    (8) Tipo -> STRING .

    VAR_ID          reduce using rule 8 (Tipo -> STRING .)


state 12

    (1) program -> START EDJO VAR_ID crea_primer_quadruple crea_funcion_global SEMICOLON Vars . funciones Main
    (58) funciones -> . FUNC tipo_funcion VAR_ID LPAREN param RPAREN agrega_funcion LBRACKET Vars reg_brack RBRACKET fin_func_quad funciones
    (59) funciones -> .

    FUNC            shift and go to state 16
    MAIN            reduce using rule 59 (funciones -> .)

    funciones                      shift and go to state 15

state 13

    (6) Tipo -> INT .

    VAR_ID          reduce using rule 6 (Tipo -> INT .)


state 14

    (4) Vars -> Tipo . VAR_ID mas_vars agrega_var_funcion SEMICOLON Vars

    VAR_ID          shift and go to state 17


state 15

    (1) program -> START EDJO VAR_ID crea_primer_quadruple crea_funcion_global SEMICOLON Vars funciones . Main
    (125) Main -> . MAIN agrega_main_funcion LPAREN RPAREN LBRACKET Vars reg_brack RET ZERO SEMICOLON RBRACKET

    MAIN            shift and go to state 19

    Main                           shift and go to state 18

state 16

    (58) funciones -> FUNC . tipo_funcion VAR_ID LPAREN param RPAREN agrega_funcion LBRACKET Vars reg_brack RBRACKET fin_func_quad funciones
    (60) tipo_funcion -> . VOID
    (61) tipo_funcion -> . Tipo
    (6) Tipo -> . INT
    (7) Tipo -> . DECIMAL
    (8) Tipo -> . STRING
    (9) Tipo -> . CHAR
    (10) Tipo -> . BOOL

    VOID            shift and go to state 20
    INT             shift and go to state 13
    DECIMAL         shift and go to state 9
    STRING          shift and go to state 11
    CHAR            shift and go to state 10
    BOOL            shift and go to state 8

    Tipo                           shift and go to state 21
    tipo_funcion                   shift and go to state 22

state 17

    (4) Vars -> Tipo VAR_ID . mas_vars agrega_var_funcion SEMICOLON Vars
    (11) mas_vars -> . COMMA VAR_ID mas_vars
    (12) mas_vars -> .

    COMMA           shift and go to state 24
    SEMICOLON       reduce using rule 12 (mas_vars -> .)

    mas_vars                       shift and go to state 23

state 18

    (1) program -> START EDJO VAR_ID crea_primer_quadruple crea_funcion_global SEMICOLON Vars funciones Main .

    $end            reduce using rule 1 (program -> START EDJO VAR_ID crea_primer_quadruple crea_funcion_global SEMICOLON Vars funciones Main .)


state 19

    (125) Main -> MAIN . agrega_main_funcion LPAREN RPAREN LBRACKET Vars reg_brack RET ZERO SEMICOLON RBRACKET
    (126) agrega_main_funcion -> .

    LPAREN          reduce using rule 126 (agrega_main_funcion -> .)

    agrega_main_funcion            shift and go to state 25

state 20

    (60) tipo_funcion -> VOID .

    VAR_ID          reduce using rule 60 (tipo_funcion -> VOID .)


state 21

    (61) tipo_funcion -> Tipo .

    VAR_ID          reduce using rule 61 (tipo_funcion -> Tipo .)


state 22

    (58) funciones -> FUNC tipo_funcion . VAR_ID LPAREN param RPAREN agrega_funcion LBRACKET Vars reg_brack RBRACKET fin_func_quad funciones

    VAR_ID          shift and go to state 26


state 23

    (4) Vars -> Tipo VAR_ID mas_vars . agrega_var_funcion SEMICOLON Vars
    (13) agrega_var_funcion -> .

    SEMICOLON       reduce using rule 13 (agrega_var_funcion -> .)

    agrega_var_funcion             shift and go to state 27

state 24

    (11) mas_vars -> COMMA . VAR_ID mas_vars

    VAR_ID          shift and go to state 28


state 25

    (125) Main -> MAIN agrega_main_funcion . LPAREN RPAREN LBRACKET Vars reg_brack RET ZERO SEMICOLON RBRACKET

    LPAREN          shift and go to state 29


state 26

    (58) funciones -> FUNC tipo_funcion VAR_ID . LPAREN param RPAREN agrega_funcion LBRACKET Vars reg_brack RBRACKET fin_func_quad funciones

    LPAREN          shift and go to state 30


state 27

    (4) Vars -> Tipo VAR_ID mas_vars agrega_var_funcion . SEMICOLON Vars

    SEMICOLON       shift and go to state 31


state 28

    (11) mas_vars -> COMMA VAR_ID . mas_vars
    (11) mas_vars -> . COMMA VAR_ID mas_vars
    (12) mas_vars -> .

    COMMA           shift and go to state 24
    SEMICOLON       reduce using rule 12 (mas_vars -> .)

    mas_vars                       shift and go to state 32

state 29

    (125) Main -> MAIN agrega_main_funcion LPAREN . RPAREN LBRACKET Vars reg_brack RET ZERO SEMICOLON RBRACKET

    RPAREN          shift and go to state 33


state 30

    (58) funciones -> FUNC tipo_funcion VAR_ID LPAREN . param RPAREN agrega_funcion LBRACKET Vars reg_brack RBRACKET fin_func_quad funciones
    (62) param -> . Tipo VAR_ID pos_commaf
    (63) param -> .
    (6) Tipo -> . INT
    (7) Tipo -> . DECIMAL
    (8) Tipo -> . STRING
    (9) Tipo -> . CHAR
    (10) Tipo -> . BOOL

    RPAREN          reduce using rule 63 (param -> .)
    INT             shift and go to state 13
    DECIMAL         shift and go to state 9
    STRING          shift and go to state 11
    CHAR            shift and go to state 10
    BOOL            shift and go to state 8

    param                          shift and go to state 34
    Tipo                           shift and go to state 35

state 31

    (4) Vars -> Tipo VAR_ID mas_vars agrega_var_funcion SEMICOLON . Vars
    (4) Vars -> . Tipo VAR_ID mas_vars agrega_var_funcion SEMICOLON Vars
    (5) Vars -> .
    (6) Tipo -> . INT
    (7) Tipo -> . DECIMAL
    (8) Tipo -> . STRING
    (9) Tipo -> . CHAR
    (10) Tipo -> . BOOL

    FUNC            reduce using rule 5 (Vars -> .)
    MAIN            reduce using rule 5 (Vars -> .)
    IF              reduce using rule 5 (Vars -> .)
    RETURN          reduce using rule 5 (Vars -> .)
    VAR_ID          reduce using rule 5 (Vars -> .)
    PRINT           reduce using rule 5 (Vars -> .)
    FOR             reduce using rule 5 (Vars -> .)
    WHILE           reduce using rule 5 (Vars -> .)
    DO              reduce using rule 5 (Vars -> .)
    TUR             reduce using rule 5 (Vars -> .)
    RET             reduce using rule 5 (Vars -> .)
    RBRACKET        reduce using rule 5 (Vars -> .)
    INT             shift and go to state 13
    DECIMAL         shift and go to state 9
    STRING          shift and go to state 11
    CHAR            shift and go to state 10
    BOOL            shift and go to state 8

    Vars                           shift and go to state 36
    Tipo                           shift and go to state 14

state 32

    (11) mas_vars -> COMMA VAR_ID mas_vars .

    SEMICOLON       reduce using rule 11 (mas_vars -> COMMA VAR_ID mas_vars .)


state 33

    (125) Main -> MAIN agrega_main_funcion LPAREN RPAREN . LBRACKET Vars reg_brack RET ZERO SEMICOLON RBRACKET

    LBRACKET        shift and go to state 37


state 34

    (58) funciones -> FUNC tipo_funcion VAR_ID LPAREN param . RPAREN agrega_funcion LBRACKET Vars reg_brack RBRACKET fin_func_quad funciones

    RPAREN          shift and go to state 38


state 35

    (62) param -> Tipo . VAR_ID pos_commaf

    VAR_ID          shift and go to state 39


state 36

    (4) Vars -> Tipo VAR_ID mas_vars agrega_var_funcion SEMICOLON Vars .

    FUNC            reduce using rule 4 (Vars -> Tipo VAR_ID mas_vars agrega_var_funcion SEMICOLON Vars .)
    MAIN            reduce using rule 4 (Vars -> Tipo VAR_ID mas_vars agrega_var_funcion SEMICOLON Vars .)
    IF              reduce using rule 4 (Vars -> Tipo VAR_ID mas_vars agrega_var_funcion SEMICOLON Vars .)
    RETURN          reduce using rule 4 (Vars -> Tipo VAR_ID mas_vars agrega_var_funcion SEMICOLON Vars .)
    VAR_ID          reduce using rule 4 (Vars -> Tipo VAR_ID mas_vars agrega_var_funcion SEMICOLON Vars .)
    PRINT           reduce using rule 4 (Vars -> Tipo VAR_ID mas_vars agrega_var_funcion SEMICOLON Vars .)
    FOR             reduce using rule 4 (Vars -> Tipo VAR_ID mas_vars agrega_var_funcion SEMICOLON Vars .)
    WHILE           reduce using rule 4 (Vars -> Tipo VAR_ID mas_vars agrega_var_funcion SEMICOLON Vars .)
    DO              reduce using rule 4 (Vars -> Tipo VAR_ID mas_vars agrega_var_funcion SEMICOLON Vars .)
    TUR             reduce using rule 4 (Vars -> Tipo VAR_ID mas_vars agrega_var_funcion SEMICOLON Vars .)
    RET             reduce using rule 4 (Vars -> Tipo VAR_ID mas_vars agrega_var_funcion SEMICOLON Vars .)
    RBRACKET        reduce using rule 4 (Vars -> Tipo VAR_ID mas_vars agrega_var_funcion SEMICOLON Vars .)


state 37

    (125) Main -> MAIN agrega_main_funcion LPAREN RPAREN LBRACKET . Vars reg_brack RET ZERO SEMICOLON RBRACKET
    (4) Vars -> . Tipo VAR_ID mas_vars agrega_var_funcion SEMICOLON Vars
    (5) Vars -> .
    (6) Tipo -> . INT
    (7) Tipo -> . DECIMAL
    (8) Tipo -> . STRING
    (9) Tipo -> . CHAR
    (10) Tipo -> . BOOL

    IF              reduce using rule 5 (Vars -> .)
    RETURN          reduce using rule 5 (Vars -> .)
    VAR_ID          reduce using rule 5 (Vars -> .)
    PRINT           reduce using rule 5 (Vars -> .)
    FOR             reduce using rule 5 (Vars -> .)
    WHILE           reduce using rule 5 (Vars -> .)
    DO              reduce using rule 5 (Vars -> .)
    TUR             reduce using rule 5 (Vars -> .)
    RET             reduce using rule 5 (Vars -> .)
    INT             shift and go to state 13
    DECIMAL         shift and go to state 9
    STRING          shift and go to state 11
    CHAR            shift and go to state 10
    BOOL            shift and go to state 8

    Vars                           shift and go to state 40
    Tipo                           shift and go to state 14

state 38

    (58) funciones -> FUNC tipo_funcion VAR_ID LPAREN param RPAREN . agrega_funcion LBRACKET Vars reg_brack RBRACKET fin_func_quad funciones
    (66) agrega_funcion -> .

    LBRACKET        reduce using rule 66 (agrega_funcion -> .)

    agrega_funcion                 shift and go to state 41

state 39

    (62) param -> Tipo VAR_ID . pos_commaf
    (64) pos_commaf -> . COMMA Tipo VAR_ID pos_commaf
    (65) pos_commaf -> .

    COMMA           shift and go to state 43
    RPAREN          reduce using rule 65 (pos_commaf -> .)

    pos_commaf                     shift and go to state 42

state 40

    (125) Main -> MAIN agrega_main_funcion LPAREN RPAREN LBRACKET Vars . reg_brack RET ZERO SEMICOLON RBRACKET
    (68) reg_brack -> . Estatutos reg_brack
    (69) reg_brack -> .
    (70) Estatutos -> . Condicion
    (71) Estatutos -> . Ciclo
    (72) Estatutos -> . Return
    (73) Estatutos -> . Asignacion
    (74) Estatutos -> . Print
    (75) Estatutos -> . Llamada_Func
    (76) Estatutos -> . TurtleMotion
    (77) Condicion -> . IF LPAREN ExpI RPAREN crea_GOTOF LBRACKET reg_brack RBRACKET pos_else llena_cuadruplo_if
    (90) Ciclo -> . For
    (91) Ciclo -> . While
    (92) Ciclo -> . DoWhile
    (83) Return -> . RETURN ExpI SEMICOLON resuelve_return
    (14) Asignacion -> . VAR_ID push_var_PilaOperandos ASSIGN push_operador_PilaOperadores ExpI SEMICOLON resuelve_asignacion
    (85) Print -> . PRINT LPAREN VAR_STRING RPAREN SEMICOLON
    (86) Print -> . PRINT LPAREN ExpI RPAREN SEMICOLON crea_print
    (88) Llamada_Func -> . VAR_ID LPAREN agrega_falso checa_funcion_si_existe argumentos RPAREN quita_falso resuelve_llamada_funcion SEMICOLON vtc_action
    (104) TurtleMotion -> . Position
    (105) TurtleMotion -> . Right
    (106) TurtleMotion -> . Left
    (107) TurtleMotion -> . Forward
    (108) TurtleMotion -> . Circle
    (109) TurtleMotion -> . IniciaTurtle
    (110) TurtleMotion -> . TerminaTurtle
    (97) For -> . FOR LPAREN VAR_ID ASSIGN ExpI SEMICOLON ExpI SEMICOLON VAR_ID Exp_ciclo RPAREN LBRACKET reg_brack RBRACKET
    (93) While -> . WHILE guarda_numero_cuadruplo LPAREN ExpI RPAREN crea_GOTOF LBRACKET reg_brack RBRACKET regresa_inicio_while
    (96) DoWhile -> . DO LBRACKET reg_brack RBRACKET WHILE LPAREN ExpI RPAREN SEMICOLON
    (111) Position -> . TUR POINT POS LPAREN ExpI COMMA ExpI RPAREN SEMICOLON pfc_set_position
    (115) Right -> . TUR POINT RIGHT LPAREN ExpI RPAREN SEMICOLON pfc_turn_right
    (117) Left -> . TUR POINT LEFT LPAREN ExpI RPAREN SEMICOLON pfc_turn_left
    (113) Forward -> . TUR POINT FORWARD LPAREN ExpI RPAREN SEMICOLON pfc_move_forward
    (119) Circle -> . TUR POINT CIRCLE LPAREN ExpI RPAREN SEMICOLON pfc_draw_circle
    (121) IniciaTurtle -> . TUR POINT TURTLE LPAREN RPAREN SEMICOLON pfc_create_turtle
    (123) TerminaTurtle -> . TUR POINT FINISH LPAREN RPAREN SEMICOLON pfc_finish_drawing

    RET             reduce using rule 69 (reg_brack -> .)
    IF              shift and go to state 66
    RETURN          shift and go to state 63
    VAR_ID          shift and go to state 51
    PRINT           shift and go to state 61
    FOR             shift and go to state 57
    WHILE           shift and go to state 60
    DO              shift and go to state 54
    TUR             shift and go to state 64

    Condicion                      shift and go to state 58
    Ciclo                          shift and go to state 44
    Print                          shift and go to state 46
    Llamada_Func                   shift and go to state 48
    Estatutos                      shift and go to state 49
    TurtleMotion                   shift and go to state 65
    DoWhile                        shift and go to state 45
    Asignacion                     shift and go to state 52
    Right                          shift and go to state 53
    Forward                        shift and go to state 59
    While                          shift and go to state 55
    reg_brack                      shift and go to state 56
    Left                           shift and go to state 68
    For                            shift and go to state 50
    Return                         shift and go to state 62
    Circle                         shift and go to state 70
    TerminaTurtle                  shift and go to state 47
    IniciaTurtle                   shift and go to state 67
    Position                       shift and go to state 69

state 41

    (58) funciones -> FUNC tipo_funcion VAR_ID LPAREN param RPAREN agrega_funcion . LBRACKET Vars reg_brack RBRACKET fin_func_quad funciones

    LBRACKET        shift and go to state 71


state 42

    (62) param -> Tipo VAR_ID pos_commaf .

    RPAREN          reduce using rule 62 (param -> Tipo VAR_ID pos_commaf .)


state 43

    (64) pos_commaf -> COMMA . Tipo VAR_ID pos_commaf
    (6) Tipo -> . INT
    (7) Tipo -> . DECIMAL
    (8) Tipo -> . STRING
    (9) Tipo -> . CHAR
    (10) Tipo -> . BOOL

    INT             shift and go to state 13
    DECIMAL         shift and go to state 9
    STRING          shift and go to state 11
    CHAR            shift and go to state 10
    BOOL            shift and go to state 8

    Tipo                           shift and go to state 72

state 44

    (71) Estatutos -> Ciclo .

    IF              reduce using rule 71 (Estatutos -> Ciclo .)
    RETURN          reduce using rule 71 (Estatutos -> Ciclo .)
    VAR_ID          reduce using rule 71 (Estatutos -> Ciclo .)
    PRINT           reduce using rule 71 (Estatutos -> Ciclo .)
    FOR             reduce using rule 71 (Estatutos -> Ciclo .)
    WHILE           reduce using rule 71 (Estatutos -> Ciclo .)
    DO              reduce using rule 71 (Estatutos -> Ciclo .)
    TUR             reduce using rule 71 (Estatutos -> Ciclo .)
    RET             reduce using rule 71 (Estatutos -> Ciclo .)
    RBRACKET        reduce using rule 71 (Estatutos -> Ciclo .)


state 45

    (92) Ciclo -> DoWhile .

    IF              reduce using rule 92 (Ciclo -> DoWhile .)
    RETURN          reduce using rule 92 (Ciclo -> DoWhile .)
    VAR_ID          reduce using rule 92 (Ciclo -> DoWhile .)
    PRINT           reduce using rule 92 (Ciclo -> DoWhile .)
    FOR             reduce using rule 92 (Ciclo -> DoWhile .)
    WHILE           reduce using rule 92 (Ciclo -> DoWhile .)
    DO              reduce using rule 92 (Ciclo -> DoWhile .)
    TUR             reduce using rule 92 (Ciclo -> DoWhile .)
    RBRACKET        reduce using rule 92 (Ciclo -> DoWhile .)
    RET             reduce using rule 92 (Ciclo -> DoWhile .)


state 46

    (74) Estatutos -> Print .

    IF              reduce using rule 74 (Estatutos -> Print .)
    RETURN          reduce using rule 74 (Estatutos -> Print .)
    VAR_ID          reduce using rule 74 (Estatutos -> Print .)
    PRINT           reduce using rule 74 (Estatutos -> Print .)
    FOR             reduce using rule 74 (Estatutos -> Print .)
    WHILE           reduce using rule 74 (Estatutos -> Print .)
    DO              reduce using rule 74 (Estatutos -> Print .)
    TUR             reduce using rule 74 (Estatutos -> Print .)
    RET             reduce using rule 74 (Estatutos -> Print .)
    RBRACKET        reduce using rule 74 (Estatutos -> Print .)


state 47

    (110) TurtleMotion -> TerminaTurtle .

    IF              reduce using rule 110 (TurtleMotion -> TerminaTurtle .)
    RETURN          reduce using rule 110 (TurtleMotion -> TerminaTurtle .)
    VAR_ID          reduce using rule 110 (TurtleMotion -> TerminaTurtle .)
    PRINT           reduce using rule 110 (TurtleMotion -> TerminaTurtle .)
    FOR             reduce using rule 110 (TurtleMotion -> TerminaTurtle .)
    WHILE           reduce using rule 110 (TurtleMotion -> TerminaTurtle .)
    DO              reduce using rule 110 (TurtleMotion -> TerminaTurtle .)
    TUR             reduce using rule 110 (TurtleMotion -> TerminaTurtle .)
    RBRACKET        reduce using rule 110 (TurtleMotion -> TerminaTurtle .)
    RET             reduce using rule 110 (TurtleMotion -> TerminaTurtle .)


state 48

    (75) Estatutos -> Llamada_Func .
